--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-jshint": "^2.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-uglifyes": "^0.1.3",
     "gulp-wrap": "^0.13.0",
     "jshint": "^2.9.5"
